fix(style.css): break dates to newline on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,14 @@ a {
   }
 }
 
+@media only screen and (max-width: 575px) {
+  /* have dates wrap below on mobile */
+  .blockHeader {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 @media print {
   body {
     background: #ffffff;
